--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==">
     <link rel="stylesheet" href="assets/css/estilos.css">
 </head>
 
@@ -80,14 +81,21 @@ Contacto: +569 64895796 / diazlillo.ariel@gmail.com / Licencia de conducir clase
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Experiencia Laboral</h3>
-                <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                </p>
+                <i class="fa-solid fa-screwdriver-wrench"></i>
+                <h3 class="my-3 fw-bold">Cursos ACHS  2024</h3>
+                <ul class="my-3">
+                    <li>Uso De Extintores</li>
+                    <li>Seguridad y Salud en Teletrabajo
+                    </li>
+                    <li>Medidas Preventivas Radiación UV
+                    </li>
+                    <li>TMERT
+                    </li>
+                    <li>Manejo Manual De Cargas</li>
+                    <li>Curso de Prevención de Riesgos. </li>
+                    
+                    
+                </ul>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
@@ -217,7 +225,7 @@ Contacto: +569 64895796 / diazlillo.ariel@gmail.com / Licencia de conducir clase
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Ariel Diaz 2025. Todos los derechos reservados.</p>
     </footer>
 
 
